<resources>
    <string name="app_name">Map Shooter</string>
    <string name="action_settings">Settings</string>
    <string name="Points">Points:</string>
    <string name="checking"> checking</string>

    <string name="permission_rationale_location">Access to the location service is required.</string>
    <string name="location_permission_denied">Map Shooter requires location permission to play. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
    <string name="permission_required_toast">Location permission is required for this game.</string>
  <string name="camera_permission_denied">Map Shooter requires camera permission to play. Please try again and grant access to use the camera.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="desc_settings">Settings menu button</string>

    <string name="title_text">Please use Google acount to sign in</string>
    <string name="signed_out">Signed out</string>

    <!-- Button labels -->
    <string name="disconnect">Disconnect</string>
    <string name="shoot">Shoot</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="map">MAP</string>
    <string name="fire">FIRE</string>
    <string name="recharging">Recharging</string>
    <string name="myLocation">My Ship</string>
    <string name="shield_active">Shield Active</string>
    <string name="activate_shield">  Activate shield  </string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>

    <!-- Settings menu options -->
    <string name="ship_name">Ship Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit">Exit</string>

    <!-- Ships name dialog -->
    <string name="ship_name_header">Ship Name</string>
    <string name="ship_message">Enter new name</string>
    <string name="new_ship_name">Ship Name</string>

    <!-- Server ID -->
    <string name="server_client_id">653188213597-vtktdjdlgo929m83vvhesq7rvtpgkngt.apps.googleusercontent.com</string>
</resources>
