<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map_fragment="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:background="@color/blue_grey_800"
        android:elevation="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="4dp"
            android:gravity="center|end"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/Points"
            android:textColor="#E1F5FE"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/checking"
            android:textColor="#E1F5FE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ship"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="4dp"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/ship_name"
            android:textColor="@color/int_text"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/signOut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/desc_settings"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_back" />

        <ImageView
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/desc_settings"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <fragment
        android:id="@+id/map_fragment"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        map_fragment:cameraZoom="17"
        map_fragment:mapType="normal"
        map_fragment:uiCompass="false"
        map_fragment:uiRotateGestures="true"
        map_fragment:uiScrollGestures="true"
        map_fragment:uiTiltGestures="true"
        map_fragment:uiZoomControls="true"
        map_fragment:uiZoomGestures="true">
        </fragment>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:background="@color/blue_grey_800"
        android:elevation="2dp"
        android:weightSum="2">

        <Button
            android:id="@+id/shootButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0.6"
            android:background="@drawable/int_button"
            android:elevation="4dp"
            android:shadowColor="@color/int_text"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/shoot"
            android:textColor="@color/int_text"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/shieldButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0.8"
            android:background="@drawable/int_button"
            android:elevation="4dp"
            android:text="@string/activate_shield"
            android:textColor="@color/int_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:shadowColor="@color/int_text"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/myLocationButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0.6"
            android:background="@drawable/int_button"
            android:elevation="4dp"
            android:text="@string/myLocation"
            android:textColor="@color/int_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:shadowColor="@color/int_text"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>
    </LinearLayout>

</LinearLayout>
